# gadgetron

./: CMakeLists.txt
apps/gadgetron/: StreamConsumer.h
chroot/: create_chroot_base.sh  start-gadgetron.sh.in  start.sh.in
docker/: gchroot  strip_docker_image
docker/base/ubuntu_1404/: Dockerfile
docker/base/ubuntu_1804/: Dockerfile
docker/base/ubuntu_1904/: Dockerfile
gadgets/: CMakeLists.txt
gadgets/cmr/config/BinningCine/: CMR_2DT_RTCine_KspaceBinning.xml  CMR_2DT_RTCine_KspaceBinning_Cloud.xml
gadgets/dicom/: DicomFinishGadget.cpp  DicomIsmrmrdImageDumpGadget.cpp  DicomIsmrmrdImageDumpGadget.h  dicom_ismrmrd_utility.cpp  dicom_ismrmrd_utility.h
gadgets/distributed/: DistributeGadget.cpp
gadgets/fatwater/: FatWaterGadget.cpp
gadgets/gtPlus/: GtPlusReconGadget.cpp  GtPlusReconJob2DTGadgetCloud.cpp
gadgets/mri_core/: BucketToBufferGadget.cpp  BucketToBufferGadget.h  CMakeLists.txt  FatWaterSeparationGadget.cpp  FatWaterSeparationGadget.h  GenericReconAccumulateImageTriggerGadget.cpp  GenericReconBase.h  GenericReconCartesianGrappaGadget.cpp  GenericReconCartesianNonLinearSpirit2DTGadget.cpp  GenericReconCartesianNonLinearSpirit2DTGadget.h  GenericReconCartesianReferencePrepGadget.cpp  GenericReconCartesianSpiritGadget.cpp  GenericReconFieldOfViewAdjustmentGadget.cpp  GenericReconFieldOfViewAdjustmentGadget.h  GenericReconGadget.cpp  GenericReconGadget.h  GenericReconImageArrayScalingGadget.h  GenericReconImagePostProcessingGadget.cpp  GenericReconImagePostProcessingGadget.h  GenericReconKSpaceFilteringGadget.cpp  GenericReconNoiseStdMapComputingGadget.cpp  GenericReconNoiseStdMapComputingGadget.h  GenericReconPartialFourierHandlingFilterGadget.cpp  GenericReconPartialFourierHandlingGadget.cpp  Generic_Cartesian_Grappa.xml  Generic_Cartesian_Grappa_EPI.xml  Generic_Cartesian_Grappa_EPI_AVE.xml  Generic_Cartesian_Grappa_RealTimeCine.xml  Generic_Cartesian_Grappa_SNR.xml  Generic_Cartesian_Grappa_T2W.xml  Generic_Cartesian_Spirit_RealTimeCine.xml  PCACoilGadget.cpp
gadgets/python/: GadgetInstrumentationStreamController.h  PythonGadget.cpp  PythonGadget.h
gadgets/python/gadgets/: cine_auto_contouring.py  gadgetron.py
gadgets/sasha_hc/: BucketToBufferHCGadget.cpp  BucketToBufferHCGadget.h  CMakeLists.txt  FlagSashaHCGadget.cpp  FlagSashaHCGadget.h  MoCoSashaHCGadget.cpp  MoCoSashaHCGadget.h  SASHA-HC.xml  sashahclib_export.h
test/: CMakeLists.txt  curveFitting_test.cpp  fatwater_test.cpp
test/integration/cases/: cmr_cine_binning.cfg  cmr_cine_binning_2slices.cfg  generic_grappa_epi_ave.cfg
toolboxes/cmr/: cmr_spirit_recon.cpp  cmr_strain_analysis.cpp
toolboxes/core/cpu/: hoNDArray_utils.h
toolboxes/core/cpu/algorithm/: hoNDBSpline.hxx
toolboxes/core/cpu/math/: hoNDImage_util.hxx
toolboxes/core/gpu/: cuNDArray_utils.cu
toolboxes/denoise/: non_local_bayes.cpp
toolboxes/dwt/cpu/: hoNDRedundantWavelet.cpp
toolboxes/fatwater/: CMakeLists.txt  fatWaterMultiPeakOperator.h  fatWaterMultiPeakR2StarOperator.h  fatwater.cpp
toolboxes/gtplus/algorithm/FreeFormDeformation/: BSplineFFD.h  BSplineFFD2D.h  BSplineFFD3D.h  BSplineFFD4D.h  FFDBase.h  MLFFD.h
toolboxes/gtplus/workflow/: gtPlusISMRMRDReconCoilMapEstimation.h  gtPlusISMRMRDReconUtil.h  gtPlusISMRMRDReconUtil.hxx  gtPlusISMRMRDReconWorkFlowCartesian.h  gtPlusISMRMRDReconWorker2DT.h  gtPlusISMRMRDReconWorker3DT.h
toolboxes/image/: CMakeLists.txt
toolboxes/image/cpu/: CMakeLists.txt
toolboxes/mri_core/: CMakeLists.txt  mri_core_grappa.cpp  mri_core_spirit.cpp  mri_core_utility.cpp  mri_core_utility.h
toolboxes/python/: python_ismrmrd_converter.h
toolboxes/registration/optical_flow/cpu/transformation/: hoImageRegDeformationField.h
